--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "angular-mydatepicker": "^0.11.0",
+    "ng-multiselect-dropdown": "^0.3.4",
+    "ng-pick-datetime": "^7.0.0",
+    "ng2-datetime": "^1.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
