--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "617749a7-ac34-45f8-aed6-0eebb9cf06fd"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
