--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "angular-mydatepicker": "^0.11.0",
+    "express": "^4.17.1",
     "ng-multiselect-dropdown": "^0.3.4",
     "ng-pick-datetime": "^7.0.0",
     "ng2-datetime": "^1.4.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
